cambios para build ionic prod

--- a/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
@@ -61,7 +61,7 @@
       [rowHeight]="50" 
       [columns]="columns"
       [columnMode]="'force'" 
-      [sortType]="'multi'" 
+      [sortType]="SortType.multi" 
       [headerHeight]="50" 
       [footerHeight]="50"
       [summaryRow]="true"
