--- a/frontend/ARAN/src/app/moto/buscaragregarmoto/buscaragregarmoto.component.html
+++ b/frontend/ARAN/src/app/moto/buscaragregarmoto/buscaragregarmoto.component.html
@@ -71,14 +71,14 @@
       [rowHeight]="50" 
       [columns]="columns"
       [columnMode]="'force'" 
-      [sortType]="'multi'" 
+      [sortType]="SortType.multi" 
       [headerHeight]="50" 
       [footerHeight]="50"
       [summaryRow]="true"
       [summaryPosition]="'bottom'"
       [loadingIndicator]="loadingIndicator"
       [reorderable]="reorderable"
-      [selected]="selected"
+      [selected]="[selected]"
       (activate)="onActivate($event)"
       
       
