solucion de errores para build de ionic

--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content class="formNuevaOT">
-  <form [formGroup]="formNuevaOT" (ngSubmit)="onSubmit(limpiar)">
+  <form [formGroup]="formNuevaOT">
     <!-- await for target -->
     <ion-item>
       <ion-label class="custom">Tarjeta </ion-label>
