--- a/frontend/ARAN/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/ARAN/src/app/components/sidenav/sidenav.component.html
@@ -24,6 +24,15 @@
        </ion-menu-toggle>
       </ion-item>
     </ion-list>
+    <ion-list>
+      <ion-item>
+        <ion-menu-toogle>
+          <ion-router-link [routerLink]="['/messenger/qr']">
+            Qr
+          </ion-router-link>
+        </ion-menu-toogle>
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-menu>
 
